@@ -271,17 +271,9 @@ class AdyenTest < Test::Unit::TestCase
     end.respond_with(successful_authorize_response)
   end
 
-  def test_nonfractional_currency_handling_with_amount_modification
+  def test_nonfractional_currency_handling
     stub_comms do
-      @gateway.authorize(1, @credit_card, @options.merge(currency: 'JPY'))
-    end.check_request do |endpoint, data, headers|
-      assert_match(/"amount\":{\"value\":\"1\",\"currency\":\"JPY\"}/, data)
-    end.respond_with(successful_authorize_response)
-  end
-
-  def test_nonfractional_currency_handling_without_amount_modification
-    stub_comms do
-      @gateway.authorize(200, @credit_card, @options.merge(currency: 'JPY', opt_out_multiply_amount: true))
+      @gateway.authorize(200, @credit_card, @options.merge(currency: 'JPY'))
     end.check_request do |endpoint, data, headers|
       assert_match(/"amount\":{\"value\":\"2\",\"currency\":\"JPY\"}/, data)
     end.respond_with(successful_authorize_response)
