@@ -26,6 +26,7 @@
 * Paypal: Update supported countries [molbrown] #3260
 * BlueSnap: Send amount in capture requests [jknipp] #3262
 * Adds Elo card type in general, and specifically to Mundipagg [jasonxp] #3255
+* Adyen: Remove temporary amount modification for non-fractional currencies [molbrown] #3263
 
 == Version 1.95.0 (May 23, 2019)
 * Adyen: Constantize version to fix subdomains [curiousepic] #3228
